# robotos

./: .gitignore  Jenkinsfile  README.md
docker/: dashboard.Dockerfile  docker-compose.yaml  foxglove-bridge.Dockerfile  go.Dockerfile  hal-gateway.Dockerfile  mcap-logger.Dockerfile  neodm.Dockerfile
docker/jenkins/: Dockerfile  docker-compose.yaml
docker/jenkins/casc/: jenkins.yaml
hal/: CMakeLists.txt
hal/drivers/mock/: mock_motor.hpp  mock_sensor.hpp  test_mock.cpp
hal/include/robotos/: hal.hpp
middleware/: go.mod  go.sum
middleware/cmd/hal-gateway/: main.go
middleware/cmd/robotos/: main.go
middleware/pkg/bus/: bus.go  bus_test.go
middleware/pkg/health/: health.go  health_test.go
middleware/pkg/log/: log.go  log_test.go
middleware/pkg/redis/: client.go  client_test.go
middleware/proto/v1/: hal.proto  neodm.proto  sensor.proto
middleware/services/behavior/: behavior.go  behavior_test.go  state.go
middleware/services/dashboard/: go.mod  hub.go  main.go  redis.go
middleware/services/foxglove-bridge/: .gitignore  assets.go  bridge.go  go.mod  go.sum  json_channels.go  main.go  protocol.go  robot.urdf  schema.go
middleware/services/hal-gateway/: gateway.go  gateway_test.go  safety.go  sensor.go
middleware/services/mcap-logger/: .gitignore  go.mod  go.sum  logger.go  main.go  schema.go
middleware/services/motion/: mock_driver.go  motion.go  motion_test.go
middleware/services/navigation/: navigation.go  navigation_test.go  planner.go
middleware/services/neodm/: conftest.py  main.py  requirements.txt  server.py  test_neodm.py
(+29 files in other folders)
